--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <title>My Website</title>
     <style>
         body {
-            background-image: url('https://images.app.goo.gl/DFtLiVV3q8wKfste7');
-            /* Set background size, position, and other properties as needed */
-            /* Example: */
+            /* Update the path to the image using the correct folder structure */
+            background-image: url('images/images (7).jpeg');
+            /* Set background size and position */
             background-size: cover;
             background-position: center;
-            /* Set additional styles for the body */
-            /* Example: */
+            /* Additional body styles */
             font-family: Arial, sans-serif;
             color: #333;
         }
-        /* You can add more CSS for specific elements within your page if needed */
+        /* Additional CSS for specific elements can be added here */
     </style>
 </head>
 
