--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             /* Update the path to the image using the correct folder structure */
-            background-image: url('images/images (7).jpeg');
+            background-image: url('images/background.jpeg');
             /* Set background size and position */
             background-size: cover;
             background-position: center;
